<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Spinner
        android:id="@+id/methodSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:entries="@array/method"
        app:layout_constraintBottom_toTopOf="@+id/sts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/methodText"
        android:layout_width="327dp"
        android:layout_height="37dp"
        android:layout_marginTop="36dp"

        android:text="Enter Your Prefered Mthod to Search"
        app:layout_constraintBottom_toTopOf="@+id/methodSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sts"
        android:layout_width="330dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="Start time, service or address"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/ets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="156dp"
        android:layout_height="58dp"
        android:layout_marginTop="100dp"
        android:text="Search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ets" />

    <EditText
        android:id="@+id/ets"
        android:layout_width="346dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="End Time If search by time"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sts" />

    <ListView
        android:id="@+id/branchList"
        android:layout_width="396dp"
        android:layout_height="425dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton" />
</androidx.constraintlayout.widget.ConstraintLayout>